--- a/8_HDC_HOST/css/styles.css
+++ b/8_HDC_HOST/css/styles.css
@@ -90,3 +90,50 @@ nav {
 .main-banner h1 {
     font-size: 54px;
 }
+
+/* services */
+.services-container {
+    padding: 5rem 0;
+}
+
+.services-container ul {
+    display: flex;
+    width: 90%;
+    /* centraliza horizontalmente */
+    margin: 0 auto;
+}
+
+.services-container li {
+    /* primeiro parametro grow : define a forma como o elemento vai crescer quando a página aumentar */
+    /* segundo parametro shrink : define a forma como o elemento vai diminuir  */
+    /* terceiro parametro basis : passando largura base*/
+    flex: 1 1 200px;
+    list-style: none;
+    text-align: center;
+    padding: 20px;
+}
+
+.fas {
+    font-size: 60px;
+    margin-bottom: 15px;
+}
+
+.fa-shield-alt {
+    color: #2cc76a;
+}
+
+.fa-rocket {
+    color: #ef3f29;
+}
+
+.fa-comments {
+    color: #ef8f29;
+}
+
+.services-container h3 {
+    margin-bottom: 25px;
+}
+
+.services-container p {
+    line-height: 24px;
+}
