--- a/8_HDC_HOST/css/styles.css
+++ b/8_HDC_HOST/css/styles.css
@@ -212,3 +212,50 @@ nav {
 .plan .recommended {
     background-color: #f45c57;
 }
+
+/* Search domain */
+
+.search-domain-container {
+    background-color: #34454e;
+    text-align: center;
+    padding: 5rem 0;
+}
+
+.search-domain-container h2 {
+    color: #fff;
+    font-size: 42px;
+    margin-bottom: 15px;
+}
+
+.search-domain-container p {
+    color: #d5d5d5;
+    font-size: 24px;
+    margin-bottom: 25px;
+}
+
+.search-domain-container input {
+    display: block;
+    border: none;
+    border-radius: 5px;
+    margin: 0 auto;
+}
+
+.search-domain-container input[type="text"] {
+    width: 60%;
+    padding: 20px;
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+.search-domain-container input[type="submit"] {
+    background-color: #2cc76a;
+    padding: 15px 30px;
+    color: #fff;
+    font-size: 34px;
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.search-domain-container input[type="submit"]:hover {
+    opacity: 1;
+}
