--- a/9_FLEXBOX/css/styles.css
+++ b/9_FLEXBOX/css/styles.css
@@ -40,3 +40,60 @@ body {
 .center .box {
     width: 50px;
 }
+
+/* gap */
+.gap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: 1px solid green;
+    gap: 10px;
+}
+
+.gap .box {
+    width: 32%;
+}
+
+/* order */
+.order {
+    display: flex;
+}
+
+#one {
+    order: 1;
+}
+
+#two {
+    order: 2;
+}
+
+#three {
+    order: 3;
+}
+
+/* grow */
+
+.grow {
+    display: flex;
+}
+
+.grow .box {
+    flex: 1;
+}
+
+.grow .big {
+    flex-grow: 2;
+}
+
+/* align-self */
+
+.align-self {
+    display: flex;
+    height: 300px;
+    border: 1px solid purple;
+    align-items: flex-start;
+}
+
+.align-self .self {
+    align-self: center;
+}
