--- a/10_CLONE_HOME_INSTA/css/styles.css
+++ b/10_CLONE_HOME_INSTA/css/styles.css
@@ -1,3 +1,36 @@
-h1 {
-    color: red;
+/* General */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Helvetica;
+}
+
+body {
+    background-color: #fafafa;
+}
+
+#main-container {
+    display: flex;
+    margin-top: 30px;
+}
+
+#form-container, #bannner-container {
+    flex: 1 1 0;
+    width: 50%;
+}
+
+#bannner-container {
+    text-align: right;
+}
+
+#bannner-container img{
+  width: 100%;
+  margin-right: 15px;
+  margin-top: 25px;
+  max-width: 380px;
+}
+
+#form-container {
+    text-align: center;
 }
